# Amiya-Bot-mcp-server

./: .dockerignore  .gitignore  Dockerfile  README.md  amiyabot-mcp-0.1.0.tgz  amiyabot-mcp-0.1.3.tgz  amiyabot-mcp-0.1.4.tgz  amiyabot-mcp-0.1.5.tgz  amiyabot-mcp-0.1.6.tgz  amiyabot-mcp-0.1.7.tgz  amiyabot-mcp-0.1.8.tgz  config.json  docker-entrypoint.sh  htpasswd  index.yaml  install.sh  main.py  pyproject.toml  requirements.txt  test.md
.docs/common/stage-template/: README.md  bugs.md  faq.md  requirements-index.md
.docs/stages/stage1/: README.md  bugs.md  faq.md  requirements-index.md
.docs/stages/stage2/: README.md  bugs.md  faq.md  requirements-index.md
.github/instructions/: readme.instructions.md
.github/workflows/: release-dockerhub.yml  release-helm-pages.yml
charts/amiyabot-mcp/: .helmignore  Chart.yaml  values.yaml
charts/amiyabot-mcp/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  deployment.yaml  ingress.yaml  pvc.yaml  service.yaml
data/: config.json  glossary.json
data/templates/operator_info/: operator_info.html.j2  operator_info.json.j2
src/: __init__.py  cli_entry.py  config.py  server.py
src/accessories/: __init__.py
src/app/: bootstrap_disk.py  card_fileservier.py  config.py  context.py  runtime_state.py
src/assets/: __init__.py  convert.py  glossary_data.py
src/entrypoints/: command_line.py  resource_update_worker.py  uvicorn_host.py
src/helpers/: card_urls.py
src/mcp_tools/: operator_skill.py
src/operator_skill/: __init__.py
src/tools/: __init__.py  operator_basic.py  operator_skill.py
(+35 files in other folders)
