[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "amiya-bot-mcp-server"
version = "0.1.0"
description = "AmiyaBot MCP Server"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
	"mcp[cli]==1.23.0",
	"fastapi==0.116.1",
	"uvicorn==0.34.3",
	"pydantic==2.11.0",
	"concurrent_log_handler==0.9.28",
	"jinja2==3.1.6",
	"playwright==1.57.0",
]

[project.scripts]
amiyabot-cli = "src.cli_entry:main"

[tool.setuptools.packages.find]
include = ["src*"]
